<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:summary="@string/recordDetails"
        android:title="@string/recordTitle"
        android:key="@string/record"
        android:defaultValue="true"
        />
    <EditTextPreference
        android:dialogMessage="@string/userAddDetails"
        android:dialogTitle="@string/userAddTitle"
        android:enabled="true"
        android:key="@string/userAdd"
        android:summary="@string/userAddDetails"
        android:defaultValue="@string/defaultGuest"
        android:selectable="true"
        android:positiveButtonText="@android:string/ok"
        android:negativeButtonText="@android:string/no"
        android:title="@string/userAddTitle"/>
    <CheckBoxPreference
        android:summary="@string/userDetail"
        android:title="@string/userTitle"
        android:key="@string/user"/>
    <ListPreference
        android:key="@string/defaultUser"
        android:summary="@string/defaultUserDetails"
        android:title="@string/defaultUserTitle"/>
    <EditTextPreference
        android:dialogMessage="@string/dbFileDetails"
        android:dialogTitle="@string/dbFileTitle"
        android:enabled="true"
        android:key="@string/dbFile"
        android:summary="@string/dbFileDetails"
        android:defaultValue="imc"
        android:selectable="true"
        android:positiveButtonText="@android:string/ok"
        android:negativeButtonText="@android:string/no"
        android:title="@string/dbFileTitle"/>
    <EditTextPreference
        android:dialogMessage="@string/userStepsPeriodDetails"
        android:dialogTitle="@string/userStepsPeriodTitle"
        android:enabled="true"
        android:key="@string/userStepsPeriod"
        android:summary="@string/userStepsPeriodDetails"
        android:defaultValue="24"
        android:selectable="true"
        android:positiveButtonText="@android:string/ok"
        android:negativeButtonText="@android:string/no"
        android:title="@string/userStepsPeriodTitle"/>
    <CheckBoxPreference
        android:summary="@string/showStepsDetails"
        android:title="@string/showStepsTitle"
        android:key="@string/showSteps"
        android:defaultValue="true"
        />
</PreferenceScreen>