<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"  xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/users"
        android:title="@string/users">
    <menu>
    <item android:id="@+id/addUser"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/addUser"/>
    <item android:id="@+id/updateUser"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/updateUser"/>
    <item android:id="@+id/removeUser"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/removeUser"/>
    </menu>
    </item>
    <item android:id="@+id/mgmt"
        android:title="@string/mgmt">
    <menu>
    <item android:id="@+id/backup"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/backup"/>
    <item android:id="@+id/restore"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/restore"/>
    </menu>
    </item>
    <item android:id="@+id/imcReferences"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/imcReferences"/>
</menu>