<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/textPoids"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poids"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignBaseline="@+id/editPoids"
        android:layout_alignParentLeft="true"
        />

    <EditText
        android:id="@id/editPoids"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_toRightOf="@id/textPoids"
        android:layout_alignParentTop="true" >
		<requestFocus />
	</EditText>

	<TextView
        android:id="@+id/textTaille"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taille"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:layout_alignBaseline="@+id/editTaille"
        android:layout_alignParentLeft="true"
        />

	<EditText
        android:id="@id/editTaille"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" 
        android:layout_toRightOf="@id/textTaille"
        android:layout_below="@id/editPoids"
        />

	<Button
        android:id="@+id/doImc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="doImc"
        android:text="@string/doImc" 
        android:layout_below="@id/editTaille"
        android:layout_alignRight="@id/editTaille"/>

    <Button
        android:id="@+id/doReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="doReset"
        android:text="@string/reset" 
        android:layout_toLeftOf="@id/doImc"
        android:layout_alignTop="@id/doImc"/>

    <TextView
        android:id="@+id/textImc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:scrollbars="vertical"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:layout_below="@id/doImc"
        android:layout_alignRight="@id/doImc"/>

    <Spinner
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/doReset"/>


</RelativeLayout>